using System.Net.Sockets;
using Axlebolt.RpcSupport.Protobuf;
using Axlebolt.Bolt.Protobuf;
using StandRiseServer.Core;
using StandRiseServer.Models;
using StandRiseServer.Utils;
using Google.Protobuf;
using MongoDB.Bson;
using MongoDB.Driver;

namespace StandRiseServer.Services;

/// <summary>
/// PKConnect –∞–≤—Ç–æ—Ä–∏–∑–∞—Ü–∏—è - –ª–æ–≥–∏–Ω/–ø–∞—Ä–æ–ª—å
/// –§–æ—Ä–º–∞—Ç –∫–∞–∫ –≤ KeyAuthService
/// </summary>
public class PKConnectRemoteService
{
    private readonly ProtobufHandler _handler;
    private readonly DatabaseService _database;
    private readonly SessionManager _sessionManager;

    public PKConnectRemoteService(ProtobufHandler handler, DatabaseService database, SessionManager sessionManager)
    {
        _handler = handler;
        _database = database;
        _sessionManager = sessionManager;

        Console.WriteLine("üîê Registering PKConnectRemoteService handlers...");
        _handler.RegisterHandler("PKConnectRemoteService", "auth", HandleAuthAsync);
        Console.WriteLine("üîê PKConnectRemoteService handlers registered!");
    }

    private async Task HandleAuthAsync(TcpClient client, RpcRequest request)
    {
        string login = "";
        string password = "";
        string deviceId = "";
        string ipAddress = "unknown";

        try
        {
            Console.WriteLine("=== PKConnect Auth Request ===");
            Console.WriteLine($"Params count: {request.Params.Count}");

            // –õ–æ–≥–∏—Ä—É–µ–º –≤—Å–µ –ø–∞—Ä–∞–º–µ—Ç—Ä—ã
            for (int i = 0; i < request.Params.Count; i++)
            {
                var param = request.Params[i];
                if (param.One != null)
                {
                    try
                    {
                        var str = Axlebolt.RpcSupport.Protobuf.String.Parser.ParseFrom(param.One).Value;
                        Console.WriteLine($"  Param[{i}] = '{str}'");
                    }
                    catch
                    {
                        Console.WriteLine($"  Param[{i}] = [binary {param.One.Length} bytes]");
                    }
                }
                else
                {
                    Console.WriteLine($"  Param[{i}] = null");
                }
            }

            // –ü–æ–ª—É—á–∞–µ–º IP
            try
            {
                if (client.Client.RemoteEndPoint is System.Net.IPEndPoint endpoint)
                    ipAddress = endpoint.Address.ToString();
            }
            catch { }

            // –ü–∞—Ä—Å–∏–º –ø–∞—Ä–∞–º–µ—Ç—Ä—ã
            if (request.Params.Count >= 2)
            {
                if (request.Params[0].One != null)
                    login = Axlebolt.RpcSupport.Protobuf.String.Parser.ParseFrom(request.Params[0].One).Value;
                if (request.Params[1].One != null)
                    password = Axlebolt.RpcSupport.Protobuf.String.Parser.ParseFrom(request.Params[1].One).Value;
            }

            if (request.Params.Count >= 3 && request.Params[2].One != null)
                deviceId = Axlebolt.RpcSupport.Protobuf.String.Parser.ParseFrom(request.Params[2].One).Value;

            // –ï—Å–ª–∏ deviceId –ø—É—Å—Ç–æ–π, –ø—Ä–æ–±—É–µ–º –≤–∑—è—Ç—å –∏–∑ Verification
            if (string.IsNullOrEmpty(deviceId) && request.Params.Count >= 6 && request.Params[5].One != null)
            {
                try
                {
                    var verification = Verification.Parser.ParseFrom(request.Params[5].One);
                    deviceId = verification.DeviceId;
                }
                catch { }
            }

            Console.WriteLine($"üîê Login='{login}', DeviceId='{deviceId}', IP={ipAddress}");

            // –í–∞–ª–∏–¥–∞—Ü–∏—è
            if (string.IsNullOrEmpty(login) || string.IsNullOrEmpty(password))
            {
                Console.WriteLine("‚ùå Login or password is empty");
                await SendError(client, request.Id, 1001, "Login or password is empty");
                return;
            }

            if (string.IsNullOrEmpty(deviceId))
            {
                deviceId = $"device_{Guid.NewGuid().ToString()[..8]}";
            }

            var playersCollection = _database.Database.GetCollection<Models.Player>("Players2");

            // –ò—â–µ–º –∏–≥—Ä–æ–∫–∞ –ø–æ –ª–æ–≥–∏–Ω—É
            Models.Player? player = await playersCollection.Find(p => p.Username == login).FirstOrDefaultAsync();

            if (player != null)
            {
                // –ü—Ä–æ–≤–µ—Ä—è–µ–º –ø–∞—Ä–æ–ª—å
                var passwordHash = Converters.CalculateMD5(password);
                if (player.PasswordHash != passwordHash)
                {
                    Console.WriteLine($"‚ùå Invalid password for: {login}");
                    await SendError(client, request.Id, 1005, "Invalid password");
                    return;
                }

                if (player.IsBanned)
                {
                    Console.WriteLine($"‚ùå Player banned: {login}");
                    await SendError(client, request.Id, 1006, "Account banned");
                    return;
                }

                Console.WriteLine($"‚úÖ Found player: {player.Name} (UID: {player.PlayerUid})");

                // –û–±–Ω–æ–≤–ª—è–µ–º
                player.Token = Guid.NewGuid().ToString();
                player.LastLogin = DateTime.UtcNow;
                player.LastIpAddress = ipAddress;
                player.DeviceId = deviceId;
                player.LastHwid = deviceId;

                await playersCollection.ReplaceOneAsync(p => p.Id == player.Id, player);
            }
            else
            {
                // –°–æ–∑–¥–∞—ë–º –Ω–æ–≤–æ–≥–æ –∏–≥—Ä–æ–∫–∞
                Console.WriteLine($"üîê Creating new player: {login}");

                var lastPlayer = await playersCollection.Find(_ => true).SortByDescending(p => p.OriginalUid).FirstOrDefaultAsync();
                int newUid = (lastPlayer?.OriginalUid ?? 10000) + 1;

                player = new Models.Player
                {
                    Id = ObjectId.GenerateNewId(),
                    PlayerUid = newUid.ToString(),
                    OriginalUid = newUid,
                    Name = login,
                    Username = login,
                    PasswordHash = Converters.CalculateMD5(password),
                    AuthToken = Converters.CalculateMD5(login + Converters.CalculateMD5(password)),
                    Token = Guid.NewGuid().ToString(),
                    DeviceId = deviceId,
                    LastHwid = deviceId,
                    LastIpAddress = ipAddress,
                    LastLogin = DateTime.UtcNow,
                    RegistrationDate = DateTime.UtcNow,
                    Level = 1,
                    Coins = 10000,
                    Gems = 1000,
                    Keys = 10,
                    IsBanned = false,
                    NoDetectRoot = true,
                    Inventory = new PlayerInventoryData { Items = new List<PlayerInventoryItem>() },
                    Stats = new PlayerStats { ArrayCust = new List<StatItem>() },
                    Social = new SocialInfo(),
                    OnlineStatus = Models.OnlineStatus.Online
                };

                await playersCollection.InsertOneAsync(player);
                Console.WriteLine($"‚úÖ Created player: {player.Name} (UID: {newUid})");
            }

            // –°–æ–∑–¥–∞—ë–º —Å–µ—Å—Å–∏—é
            _sessionManager.AddSession(new PlayerSession
            {
                PlayerObjectId = player.Id.ToString(),
                Token = player.Token,
                Hwid = deviceId,
                TimeInGame = player.TimeInGame,
                Client = client
            });

            // –û—Ç–ø—Ä–∞–≤–ª—è–µ–º —Ç–æ–∫–µ–Ω - –¢–û–ß–ù–û –ö–ê–ö –í KeyAuthService
            var resultToken = new Axlebolt.RpcSupport.Protobuf.String { Value = player.Token };
            var result = new BinaryValue
            {
                IsNull = false,
                One = resultToken.ToByteString()  // ToByteString() –∫–∞–∫ –≤ KeyAuthService!
            };

            await _handler.WriteProtoResponseAsync(client, request.Id, result, null);
            Console.WriteLine($"‚úÖ PKConnect Auth success: {player.Name} (Token: {player.Token[..8]}...)");
        }
        catch (System.Exception ex)
        {
            Console.WriteLine($"‚ùå PKConnect Auth error: {ex.Message}");
            Console.WriteLine($"StackTrace: {ex.StackTrace}");
            await SendError(client, request.Id, 500, ex.Message);
        }
    }

    private async Task SendError(TcpClient client, string guid, int code, string message)
    {
        await _handler.WriteProtoResponseAsync(client, guid, null,
            new RpcException { Id = guid, Code = code, Property = new RpcExceptionProperty { Reason = message } });
    }
}
